--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,6 +20,6 @@
 {% endif %}
 <div style="color:#0000FF" id="xyz">
   <h3>DISCLAIMER</h3>
-  <p>This is a paragraph.</p>
+  <p>The content provided on this GitHub Pages site is solely a personal knowledge base and reflects my individual thoughts and learning experiences. It includes demonstrations, code snippets, and other technical examples that are intended purely for educational purposes.</p>
 </div> 
 <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
