--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
   </ul>
 </div>
 {% endif %}
-<div>
+<div class="page__footer-copyright">
   <h3>DISCLAIMER</h3>
   <p>The content provided on this GitHub Pages site is solely a personal knowledge base and reflects my individual thoughts and learning experiences. All examples are fabricated and do not pertain to any real-world client or customer data and deliverables. It includes demonstrations, code snippets, and other technical examples that are intended purely for educational purposes.</p>
 </div> 
